--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,9 +33,13 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Etapa3
 excludes=
+file.reference.mysql-connector-j-9.1.0.jar=C:\\Users\\HEARTHLONELY\\Desktop\\Internet Explorer\\Learning\\mysql-connector-j-9.1.0.jar
+file.reference.mysql-connector-j-9.1.0.jar-1=D:\\Ignored\\[Java]\\mysql-connector-j-9.1.0.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.mysql-connector-j-9.1.0.jar}:\
+    ${file.reference.mysql-connector-j-9.1.0.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -71,7 +75,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=Etapa3
-main.class=TelaCriacaoConta
+main.class=etapa3.forms.TelaCriacaoConta
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
@@ -82,7 +86,7 @@ run.classpath=\
 # Space-separated list of JVM arguments used when running the project.
 # You may also define separate properties like run-sys-prop.name=value instead of -Dname=value.
 # To set system properties for unit tests define test-sys-prop.name=value:
-run.jvmargs=
+run.jvmargs=-Djava.security.policy=applet.policy
 run.modulepath=\
     ${javac.modulepath}
 run.test.classpath=\
